tests/snapshots/errors/unknown_type_annotation.mc
fun test(x: UnknownType) -> int {
    return 0;
}
